# zhos

./: README.md
kernel/: CMakeLists.txt
kernel/source/applib/: crt0.S  cstart.c  lib_syscall.c  lib_syscall.h
kernel/source/boot/: CMakeLists.txt  boot.c  boot.h  start.S
kernel/source/comm/: boot_info.h  cpu_instr.h  elf.h  types.h
kernel/source/init/: CMakeLists.txt  main.c  main.h
kernel/source/kernel/: CMakeLists.txt  kernel.lds
kernel/source/kernel/core/: memory.c  syscall.c  task.c
kernel/source/kernel/cpu/: cpu.c  irq.c
kernel/source/kernel/dev/: console.c  dev.c  disk.c  kbd.c  time.c  tty.c
kernel/source/kernel/fs/: file.c  fs.c
kernel/source/kernel/fs/devfs/: devfs.c
kernel/source/kernel/fs/fatfs/: fatfs.c
kernel/source/kernel/include/: os_cfg.h
kernel/source/kernel/include/core/: memory.h  syscall.h  task.h
kernel/source/kernel/include/cpu/: cpu.h  irq.h  mmu.h
kernel/source/kernel/include/dev/: console.h  dev.h  disk.h  kbd.h  time.h  tty.h
kernel/source/kernel/include/fs/: file.h  fs.h
kernel/source/kernel/include/fs/devfs/: devfs.h
kernel/source/kernel/include/fs/fatfs/: fatfs.h
kernel/source/kernel/include/ipc/: atomic.h  mutex.h  sem.h  spinlock.h
kernel/source/kernel/include/tools/: bitmap.h  klib.h  list.h  log.h
kernel/source/kernel/init/: first_task.c  first_task_entry.S  init.c  init.h  lib_syscall.c  start.S
kernel/source/kernel/ipc/: atomic.c  mutex.c  sem.c  spinlock.c
kernel/source/kernel/tools/: bitmap.c  klib.c  list.c  log.c
kernel/source/loader/: CMakeLists.txt  loader.h  loader_16.c  loader_32.c  (+1 more)
(+8 files in other folders)
